<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BerezovskyHW2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string-array
        name="drawer_action_titles">
        <item>Go to animations1</item>
        <item>Go to animations2</item>
        <item>Go to animations3</item>
        <item>Go to animations4</item>
    </string-array>
    <string name="btn_fade_title">Toggle Fade Animation</string>
    <string name="btn_zoom_title">Toggle Zoom Animation</string>
    <string name="btn_rotate_title">Rotate Animation</string>
    <string name="btn_move_title">Move Animation</string>
    <string name="home_fragment_text">This is home fragment. Click any drawer item to switch to animation fragment</string>
    <string name="animation_fragment_text">This is animations fragment. The animations are simple and stupid. No smart behaviour. Click the buttons.</string>


</resources>
