<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btn_fade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_fade_title" />
    <Button
        android:id="@+id/btn_zoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_zoom_title" />
    <Button
        android:id="@+id/btn_rotate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_rotate_title" />
    <Button
        android:id="@+id/btn_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_move_title" />
    <TextView
        android:id="@+id/animation_text_view"
        android:text="@string/animation_fragment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>